                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
[ When backported to 2.2.x, remove entry from this file ]

  *) mod_dav_fs: Retrieve minimal system information about directory 
     entries when walking a DAV fs, resolving a performance degradation on 
     Windows.  PR 45464.  [Jeff Trawick]

  *) mod_cgid: Pass along empty command line arguments from an ISINDEX
     query that has consecutive '+' characters in the QUERY_STRING, 
     matching the behavior of mod_cgi.
     [Eric Covener]

  *) mod_auth_core: Detect during startup when AuthDigestProvider
     is configured to use an incompatible provider via AuthnProviderAlias.
     PR 45196 [Eric Covener]

  *) mod_session: Prevent a segfault when a CGI script sets a cookie with a
     null value. [David Shane Holden <dpejesh apache.org>]

  *) mod_headers: Prevent Header edit from processing only the first header
     of possibly multiple headers with the same name and deleting the
     remaining ones. PR 45333.  [Ruediger Pluem]

  *) mod_rewrite: Preserve the query string with [proxy,noescape]. PR 45247
     [Tom Donovan]

  *) mod_proxy_http: Do not forward requests with 'Expect: 100-continue' to
     known HTTP/1.0 servers. Return 'Expectation failed' (417) instead.
     [Ruediger Pluem]

  *) core, authn/z: Determine registered authn/z providers directly in
     ap_setup_auth_internal(), which allows optional functions that just
     wrapped ap_list_provider_names() to be removed from authn/z modules.
     [Chris Darroch]

  *) authn/z: Convert common provider version strings to macros.
     [Chris Darroch]

  *) ab: Make ab.c compile on VC6. PR 45024 [Ruediger Pluem]

  *) configure: Don't reject libtool 2.x
     PR 44817 [Arfrever Frehtes Taifersar Arahesis <Arfrever.FTA gmail.com>]

  *) core: When testing for slash-terminated configuration paths in
     ap_location_walk(), don't look past the start of an empty string