@@ -2,6 +2,10 @@
 Changes with Apache 2.3.0
 [ When backported to 2.2.x, remove entry from this file ]
 
+  *) mod_proxy: Add connectiontimeout parameter for proxy workers in order to
+     be able to set the timeout for connecting to the backend separately.
+     PR 45445. [Ruediger Pluem, rahul <rahul sun.com>]
+
   *) mod_dav_fs: Retrieve minimal system information about directory 
      entries when walking a DAV fs, resolving a performance degradation on 
      Windows.  PR 45464.  [Jeff Trawick]
